# SkinBouncer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
01_BusinessUnderstanding/: BusinessUnderstanding.html  BusinessUnderstanding.ipynb
02_DataUnderstanding/: DataUnderstanding.html  DataUnderstanding.ipynb  skin.py
02_DataUnderstanding/Mining/SkinsByKeyword/: KeywordScraperPrompt.md  README.md  minecraft_keyword_scraper.py  smoke_test_keyword_scraper.py
02_DataUnderstanding/Mining/SkinsFromUuid/: minecraft_skin_downloader.py
03_DataPreparation/: DataPreparation.html  DataPreparation.ipynb
04_Modeling/: Modeling.html  Modeling.ipynb  Modeling_Results.html  Modeling_Results.ipynb  cnn-for-mnist-classification.ipynb  cnn_mvp.ipynb
05_Evaluation/: Evaluation.html  Evaluation.ipynb
06_Deployment/: Deployment.html  Deployment.ipynb
06_Deployment/api/: main.py
data/skins/general/: skin_manifest.csv
scripts/: generate_sample_data.py  setup_detector_project.py
skinbouncer_core/: __init__.py  architecture.py  augmentation.py  detector_project.py  model_io.py  preprocessing.py  threshold.py
