[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skinbouncer-core"
version = "0.1.0"
description = "Shared preprocessing/model/threshold-tuning code for the SkinBouncer skin classifier"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["skinbouncer_core"]
