[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skinbouncer-core"
version = "0.1.0"
description = "Shared preprocessing/model/threshold-tuning code for the SkinBouncer skin classifier"
requires-python = ">=3.11"
dependencies = [
    "pandas==3.0.3",
    "requests==2.32.3",
    "tensorflow==2.21.0",
    "matplotlib==3.11.0",
    "numpy>=2.3.3",
    "scikit-learn==1.9.0",
    "seaborn==0.13.2",
    "opencv-python==5.0.0.93",
    "Pillow==12.2.0",
    # for deployment
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "python-multipart==0.0.32",
    "pydantic==2.10.6",
    "rich==15.0.0",
]

[tool.setuptools]
packages = ["skinbouncer_core"]
